        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove is_exe method from SPVM::Builder::Config.
        * Remove is_resource field from SPVM::Builder::ObjectFileInfo.
        * Remove is_exe field from SPVM::Builder::ObjectFileInfo.
        * Remove is_exe field from SPVM::Builder::LinkInfo.
        * Remove is_lib_file field from SPVM::Builder::ObjectFileInfo.
        
0.9604_01  2022-06-07
        [CHANGE]
        * switch statement can have only default statement.
        * switch statement don't need to have case statements.
        * The values of the case statements can't be duplicated.
        * Perform unary numeric widening conversion to the condition of switch statement.
        * "break" statement can be ommited.
        * Improve the messages of the compilation errors.
        * Add the following functions to Fn class
          static method BYTE_MAX : byte ()
          static method BYTE_MIN : byte ()
          static method SHORT_MAX : short ()
          static method SHORT_MIN : short ()
          static method INT_MAX : int ()
          static method INT_MIN : int ()
          static method LONG_MAX : long ()
          static method LONG_MIN : long ()
          static method UBYTE_MAX : byte ()
          static method USHORT_MAX : short ()
          static method UINT_MAX : int ()
          static method ULONG_MAX : long ()
          static method FLOAT_MAX : float ()
          static method FLOAT_MIN : float()
          static method DOUBLE_MAX : double ()
          static method DOUBLE_MIN : double ()
        * Add SPVM::Builder::Resource module
        * Add use_resource method to SPVM::Builder::Config
        * Resource system is separated from SPVM moudle system
        * Resource doesn't need native module file.
        * Add --resource option to spvmdist.

0.9604  2022-06-08
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove Unicode module. Unicode module becomes CPAN module.